// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | doc | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | doc | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | error | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | error | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | backend | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | doc | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | doc | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | error | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | error | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | frontend | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | doc | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | doc | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | error | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | error | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > explicit | fullstack | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | doc | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | doc | docs=none 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | error | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | error | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | backend | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | doc | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | doc | docs=none 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | error | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | error | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | frontend | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | doc | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | doc | docs=none 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | error | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | error | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > infer | fullstack | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | doc | docs=full 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | doc | docs=none 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | error | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | error | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | backend | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | doc | docs=full 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | doc | docs=none 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | error | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | error | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | frontend | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | doc | docs=design-only 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | doc | docs=full 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | doc | docs=none 1`] = `
[
  "common/injections/directive",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | error | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | error | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | error | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | feature | docs=design-only 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | feature | docs=full 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | feature | docs=none 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | setup | docs=design-only 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | setup | docs=full 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | setup | docs=none 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | test-code | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | test-code | docs=full 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | test-code | docs=none 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | verification | docs=design-only 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | verification | docs=full 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;

exports[`Audit 1A: Orthogonal matrix (source × env × taskType × docs) > none | fullstack | verification | docs=none 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
]
`;
